Vol 1 No 2 - Bunko's Quest

--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_home.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_home.html
@@ -14,39 +14,39 @@
 <HR>
 </CENTER>
 <UL>
-<LI><B><A HREF="bi_vol_1_no_3_cover.html" CLASS="BaseballInk" TARGET="fraViewFrame">The Cover</A></B></LI>
+<LI><B><a href="bi_vol_1_no_3_cover.html" TARGET="fraViewFrame">The Cover</a></B></LI>
 
-<LI><B><A HREF="bi_vol_1_no_3_letter_from_publisher.html" CLASS="BaseballInk" TARGET="fraViewFrame">Letter from the Publisher</A></B></LI>
+<LI><B><a href="bi_vol_1_no_3_letter_from_publisher.html" TARGET="fraViewFrame">Letter from the Publisher</a></B></LI>
 
-<LI><B><A HREF="bi_vol_1_no_3_machine_gun.html" CLASS="BaseballInk" TARGET="fraViewFrame">Machine Gun Manny</A></B>, by Dave Boeckhout</LI>
+<LI><B><a href="bi_vol_1_no_3_machine_gun.html" TARGET="fraViewFrame">Machine Gun Manny</a></B>, by Dave Boeckhout</LI>
 
-<LI><A HREF="bi_vol_1_no_3_diamond_madness.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Diamond Madness #2</A></B> - a baseball crossword puzzle</LI>
+<LI><a href="bi_vol_1_no_3_diamond_madness.html" TARGET="fraViewFrame"><B>Diamond Madness #2</a></B> - a baseball crossword puzzle</LI>
 
-<LI><A HREF="bi_vol_1_no_3_cartas_crypto.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Carta's Crypto</A></B> - a baseball-related cryptogram by Kathy Martenot</LI>
+<LI><a href="bi_vol_1_no_3_cartas_crypto.html" TARGET="fraViewFrame"><B>Carta's Crypto</a></B> - a baseball-related cryptogram by Kathy Martenot</LI>
 
-<LI><A HREF="bi_vol_1_no_3_bunkos_quest.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Bunko's Quest</B></A>, by Mike McCann</LI>
+<LI><a href="bi_vol_1_no_3_bunkos_quest.html" TARGET="fraViewFrame"><B>Bunko's Quest</B></a>, by Mike McCann</LI>
 
-<LI><A HREF="bi_vol_1_no_3_next_time.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Next Time I'll Be Ready</A></B>, by Tom Tilert</LI>
+<LI><a href="bi_vol_1_no_3_next_time.html" TARGET="fraViewFrame"><B>Next Time I'll Be Ready</a></B>, by Tom Tilert</LI>
 
-<LI><A HREF="bi_vol_1_no_3_mcgwire_17_hr_behind.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>McGwire 17 HR Behind Mantle</A></B>, by Raymond Mileur</LI>
+<LI><a href="bi_vol_1_no_3_mcgwire_17_hr_behind.html" TARGET="fraViewFrame"><B>McGwire 17 HR Behind Mantle</a></B>, by Raymond Mileur</LI>
 
-<LI><A HREF="bi_vol_1_no_3_limericks.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Limericks</A></B>, by Bennett Oberfeld</LI>
+<LI><a href="bi_vol_1_no_3_limericks.html" TARGET="fraViewFrame"><B>Limericks</a></B>, by Bennett Oberfeld</LI>
 
-<LI><A HREF="bi_vol_1_no_3_poems.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Poems</A></B>, by Dan Zamudio</LI>
+<LI><a href="bi_vol_1_no_3_poems.html" TARGET="fraViewFrame"><B>Poems</a></B>, by Dan Zamudio</LI>
 
-<LI><A HREF="bi_vol_1_no_3_tom_tresh.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Former Yankee Tom Tresh Recalls Stellar Rookie Year</A></B>, by Todd Newville</LI>
+<LI><a href="bi_vol_1_no_3_tom_tresh.html" TARGET="fraViewFrame"><B>Former Yankee Tom Tresh Recalls Stellar Rookie Year</a></B>, by Todd Newville</LI>
 
-<LI><A HREF="bi_vol_1_no_3_ryans_corner.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Ryan's Corner</B></A>, by Ryan</LI>
+<LI><a href="bi_vol_1_no_3_ryans_corner.html" TARGET="fraViewFrame"><B>Ryan's Corner</B></a>, by Ryan</LI>
 
-<LI><A HREF="bi_vol_1_no_3_all_maryland_team.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>All-Star State Teams:  Maryland</A></B>, by Dave Quinn</LI>
+<LI><a href="bi_vol_1_no_3_all_maryland_team.html" TARGET="fraViewFrame"><B>All-Star State Teams:  Maryland</a></B>, by Dave Quinn</LI>
 
-<LI><A HREF="bi_vol_1_no_3_tommy_t.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Tommy T's Baseball Flix Pix</A></B>, by Tom Tilert</LI>
+<LI><a href="bi_vol_1_no_3_tommy_t.html" TARGET="fraViewFrame"><B>Tommy T's Baseball Flix Pix</a></B>, by Tom Tilert</LI>
 
-<LI><A HREF="bi_vol_1_no_3_international_dream.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Chasing the International Baseball Dream</A></B>, by Olga Zavolovich</LI>
+<LI><a href="bi_vol_1_no_3_international_dream.html" TARGET="fraViewFrame"><B>Chasing the International Baseball Dream</a></B>, by Olga Zavolovich</LI>
 
-<LI><A HREF="bi_vol_1_no_3_magic_in_rohnert_park.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Magic in Rohnert Park</B></A>, by Jane Richard</LI>
+<LI><a href="bi_vol_1_no_3_magic_in_rohnert_park.html" TARGET="fraViewFrame"><B>Magic in Rohnert Park</B></a>, by Jane Richard</LI>
 
-<LI><A HREF="bi_vol_1_no_3_puzzle_answers.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Puzzle Answers</B></A></LI>
+<LI><a href="bi_vol_1_no_3_puzzle_answers.html" TARGET="fraViewFrame"><B>Puzzle Answers</B></a></LI>
 
 
 
@@ -54,13 +54,13 @@
 
 <!--
 <HR>
-<A HREF="../bi_subscriptions.html" CLASS="BaseballInk" TARGET="fraViewFrame">Subscribe here!</A>
+<a href="../bi_subscriptions.html" TARGET="fraViewFrame">Subscribe here!</a>
 <HR>
 -->
 
 
 
-<A HREF="http://www.baseballink.com" CLASS="BaseballInk" TARGET="_top">Click here to go to the Baseball Ink Home Page</A>
+<a href="http://www.baseballink.com" TARGET="_top">Click here to go to the Baseball Ink Home Page</a>
 </BODY>
 
 </HTML>
