--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_international_dream.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_international_dream.html
@@ -35,11 +35,11 @@ What's does next year hold for these daring Foreign Devils?  "I'm looking into e
 
 
 
-<I>Learn more about the Foreign Devils at <A HREF="http://www.foreigndevilsbaseball.com">www.foreigndevilsbaseball.com</A></I>
+<I>Learn more about the Foreign Devils at <a href="http://www.foreigndevilsbaseball.com">www.foreigndevilsbaseball.com</a></I>
 
 
 <HR>
-<A HREF="bi_vol_1_no_3_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
