--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_tom_tresh.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_tom_tresh.html
@@ -77,12 +77,12 @@
 <i>Todd Newville lives in Oklahoma City and has a wife named Melissa. A journalism graduate from the University of Oklahoma in 1992, he has written about all sports ranging from basketball to bowling. He currently is editor for a publication called Pro Rodeo World - but baseball is truly his passion.
 
 Todd has designed his own website - Baseball Todd's Dugout. Visit soon at <a href="http://www.baseballtoddsdugout.com" 
-CLASS="BaseballInk">www.baseballtoddsdugout.com</A>.
+CLASS="BaseballInk">www.baseballtoddsdugout.com</a>.
 </i>
 
 
 <HR>
-<A HREF="bi_vol_1_no_3_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
