--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_letters_to_publisher.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_letters_to_publisher.html
@@ -9,7 +9,7 @@
 <BODY>
 <H2>Letters To The Publisher</H2>
 
-<B>Our last "Letter from the Publisher" calling for a ban on steroid usage in baseball ("Boycotting Murders' Row" - <A HREF="../vol_1_no_3/bi_vol_1_no_3_letter_from_publisher.html" CLASS="BaseballInk" TARGET="fraViewFrame">Vol. 1, No. 3 - December 2000</A>) caused quite a stir.  Here are a couple of the responses:</B>
+<B>Our last "Letter from the Publisher" calling for a ban on steroid usage in baseball ("Boycotting Murders' Row" - <a href="../vol_1_no_3/bi_vol_1_no_3_letter_from_publisher.html" TARGET="fraViewFrame">Vol. 1, No. 3 - December 2000</a>) caused quite a stir.  Here are a couple of the responses:</B>
 
 	*	*	*	*	*	*	*	*	*
 
@@ -44,7 +44,7 @@ Fax: (212) 752-4378
 
 	*	*	*	*	*	*	*	*	*
 
-<B>And a note about <A HREF="../vol_1_no_3/bi_vol_1_no_3_all_maryland_team.html" CLASS="BaseballInk" TARGET="fraViewFrame">last issue's All-Star State team</A>...</B>
+<B>And a note about <a href="../vol_1_no_3/bi_vol_1_no_3_all_maryland_team.html" TARGET="fraViewFrame">last issue's All-Star State team</a>...</B>
 
 This is in response to the Maryland State All-Star team as selected by Mr. Dave Quinn (does his selection count if he doesn't live in the state of Maryland???)  I have a few suggestions that I believe would improve his team selection....
 
@@ -109,7 +109,7 @@ Addendum: here's a quote by a California Hall of Famer about a Maryland Hall of 
 
 T. Tilert
 <HR>
-<A HREF="bi_vol_1_no_4_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
