--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_missing_october.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_missing_october.html
@@ -37,10 +37,10 @@ Every winter my dad finds ways not to miss baseball. He'll read player biographi
 
 <I>This article first appeared in the November 17th, 1999 issue of Panic Magazine and is re-printed by permission.</I>
 
-<I>Please visit Panic Magazine online at </I><A HREF="http://www.panicmag.com" CLASS="BaseballInk" TARGET="_blank">www.panicmag.com</A>.
+<I>Please visit Panic Magazine online at </I><a href="http://www.panicmag.com" TARGET="_blank">www.panicmag.com</a>.
 
 <HR>
-<A HREF="bi_vol_1_no_4_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
