--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_opening_day.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_opening_day.html
@@ -44,11 +44,11 @@ I may have been thousands of miles from home, but it was April, and I was sittin
 It's winter now, and as I look forward to spring training, I sit and daydream about what kind of miracle it would take for my Brewers to be playing in Yankee stadium this October.  Remember the musical "Damn Yankees?"  Does anyone know how to get in touch with Mr. Applegate?  Just remember, if the Brewers opening day lineup includes a great young prospect that goes by the name of Joe Hardy, you can bet that the Brewers will win the World Series.  And if Joe Hardy does indeed wind up with the Brewers, please do me a favor.  Send my wife some roses -- she'll be lonely.
 
 
-<I>Karl Jacobsen has a strong interest in 19th century baseball and has written a historical piece for </I><A HREF="http://www.efqreview.com" CLASS="BaseballInk" TARGET="_blank">Elysian Fields Quarterly</A><I>.  Other than baseball, his interests include canoeing, fishing, and writing.</I>
+<I>Karl Jacobsen has a strong interest in 19th century baseball and has written a historical piece for </I><a href="http://www.efqreview.com" TARGET="_blank">Elysian Fields Quarterly</a><I>.  Other than baseball, his interests include canoeing, fishing, and writing.</I>
 
 
 <HR>
-<A HREF="bi_vol_1_no_4_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
