--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_cover.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_cover.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <BODY CLASS="Invert">
-<A HREF="bi_vol_2_no_1_home.html" CLASS="Invert" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" CLASS="Invert" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 
 
@@ -17,7 +17,7 @@
 </CENTER>
 
 
-<A HREF="bi_vol_2_no_1_home.html" CLASS="Invert" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" CLASS="Invert" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 </BODY>
 
