--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_field_for_dreams.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_field_for_dreams.html
@@ -43,12 +43,12 @@ Not at the ballpark Saturday night were some people who should have been. Some w
 
 Not only did they miss a good ball game. They missed a chance to spend time with one another. Time to talk. Time to heal. And who knows? Some of them might have even taken home a foul ball.
 
-J.K. Richards is a syndicated columnist living in Kingsport, Tenn. As a native Californian he is a lifelong Dodger fan but doesn't admit to it while east of the Mississippi for fear of having his Yankee "Hollywood" neck stretched from a dogwood tree. If you'd like to read more of his work check out his archived columns at <A HREF="http://www.villageidiom.everden.com" TARGET="_blank"><i>www.villageidiom.evereden.com</i></A>
+J.K. Richards is a syndicated columnist living in Kingsport, Tenn. As a native Californian he is a lifelong Dodger fan but doesn't admit to it while east of the Mississippi for fear of having his Yankee "Hollywood" neck stretched from a dogwood tree. If you'd like to read more of his work check out his archived columns at <a href="http://www.villageidiom.everden.com" TARGET="_blank"><i>www.villageidiom.evereden.com</i></a>
 
 
 
 <HR>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
