--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_home.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_home.html
@@ -14,37 +14,37 @@
 <HR>
 </CENTER>
 <UL>
-<LI><B><A HREF="bi_vol_2_no_1_cover.html" CLASS="BaseballInk" TARGET="fraViewFrame">The Cover</A></B></LI>
+<LI><B><a href="bi_vol_2_no_1_cover.html" TARGET="fraViewFrame">The Cover</a></B></LI>
 
-<LI><A HREF="bi_vol_2_no_1_all_alabama_team.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>All-Star State Teams:  Alabama</A></B>, by Steve A. Maze</LI>
+<LI><a href="bi_vol_2_no_1_all_alabama_team.html" TARGET="fraViewFrame"><B>All-Star State Teams:  Alabama</a></B>, by Steve A. Maze</LI>
 
-<LI><B><A HREF="bi_vol_2_no_1_letter_from_publisher.html" CLASS="BaseballInk" TARGET="fraViewFrame">Letter from the Publisher</A></B></LI>
+<LI><B><a href="bi_vol_2_no_1_letter_from_publisher.html" TARGET="fraViewFrame">Letter from the Publisher</a></B></LI>
 
-<LI><A HREF="bi_vol_2_no_1_cow_pasture.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Cow Pasture Baseball</A></B>, by Bill Raven</LI>
+<LI><a href="bi_vol_2_no_1_cow_pasture.html" TARGET="fraViewFrame"><B>Cow Pasture Baseball</a></B>, by Bill Raven</LI>
 
-<LI><A HREF="bi_vol_2_no_1_kell.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Catching Up With Kell</A></B>, by Jim Sanders</LI>
+<LI><a href="bi_vol_2_no_1_kell.html" TARGET="fraViewFrame"><B>Catching Up With Kell</a></B>, by Jim Sanders</LI>
 
-<LI><A HREF="bi_vol_2_no_1_diamond_madness.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Diamond Madness #4</A></B> - a baseball crossword puzzle</LI>
+<LI><a href="bi_vol_2_no_1_diamond_madness.html" TARGET="fraViewFrame"><B>Diamond Madness #4</a></B> - a baseball crossword puzzle</LI>
 
-<LI><A HREF="bi_vol_2_no_1_tarot_1.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Tarot and Baseball, Part 1</A></B>, by Kerri McEntire</LI>
+<LI><a href="bi_vol_2_no_1_tarot_1.html" TARGET="fraViewFrame"><B>Tarot and Baseball, Part 1</a></B>, by Kerri McEntire</LI>
 
-<LI><A HREF="bi_vol_2_no_1_bunkos_quest.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Bunko's Quest</B></A>, by Mike McCann</LI>
+<LI><a href="bi_vol_2_no_1_bunkos_quest.html" TARGET="fraViewFrame"><B>Bunko's Quest</B></a>, by Mike McCann</LI>
 
-<LI><A HREF="bi_vol_2_no_1_tommy_t.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Tommy T's Baseball Flix Pix</A></B>, by Tom Tilert</LI>
+<LI><a href="bi_vol_2_no_1_tommy_t.html" TARGET="fraViewFrame"><B>Tommy T's Baseball Flix Pix</a></B>, by Tom Tilert</LI>
 
-<LI><A HREF="bi_vol_2_no_1_dervil_burlow.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Dervil Burlow</A></B>, by Richard Johnson</LI>
+<LI><a href="bi_vol_2_no_1_dervil_burlow.html" TARGET="fraViewFrame"><B>Dervil Burlow</a></B>, by Richard Johnson</LI>
 
-<LI><A HREF="bi_vol_2_no_1_field_for_dreams.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>A Field For Dreams</A></B>, by J. K. Richards</LI>
+<LI><a href="bi_vol_2_no_1_field_for_dreams.html" TARGET="fraViewFrame"><B>A Field For Dreams</a></B>, by J. K. Richards</LI>
 
-<LI><A HREF="bi_vol_2_no_1_ryans_corner.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Ryan's Corner</B></A>, by Ryan</LI>
+<LI><a href="bi_vol_2_no_1_ryans_corner.html" TARGET="fraViewFrame"><B>Ryan's Corner</B></a>, by Ryan</LI>
 
-<LI><A HREF="bi_vol_2_no_1_life_on_the_road.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Life On The Road</A></B>, by Frank Priegue</LI>
+<LI><a href="bi_vol_2_no_1_life_on_the_road.html" TARGET="fraViewFrame"><B>Life On The Road</a></B>, by Frank Priegue</LI>
 
-<LI><A HREF="bi_vol_2_no_1_cartas_crypto.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Carta's Crypto</A></B> - a baseball-related cryptogram by Kathy Martenot</LI>
+<LI><a href="bi_vol_2_no_1_cartas_crypto.html" TARGET="fraViewFrame"><B>Carta's Crypto</a></B> - a baseball-related cryptogram by Kathy Martenot</LI>
 
-<LI><A HREF="bi_vol_2_no_1_hungary_for_the_game.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Hungary For The Game</B></A>, by Sam Margolis</LI>
+<LI><a href="bi_vol_2_no_1_hungary_for_the_game.html" TARGET="fraViewFrame"><B>Hungary For The Game</B></a>, by Sam Margolis</LI>
 
-<LI><A HREF="bi_vol_2_no_1_puzzle_answers.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Puzzle Answers</B></A></LI>
+<LI><a href="bi_vol_2_no_1_puzzle_answers.html" TARGET="fraViewFrame"><B>Puzzle Answers</B></a></LI>
 
 
 
@@ -52,12 +52,12 @@
 
 <!--
 <HR>
-<A HREF="../bi_subscriptions.html" CLASS="BaseballInk" TARGET="fraViewFrame">Subscribe here!</A>
+<a href="../bi_subscriptions.html" TARGET="fraViewFrame">Subscribe here!</a>
 <HR>
 -->
 
 
-<A HREF="http://www.baseballink.com" CLASS="BaseballInk" TARGET="_top">Click here to go to the Baseball Ink Home Page</A>
+<a href="http://www.baseballink.com" TARGET="_top">Click here to go to the Baseball Ink Home Page</a>
 </BODY>
 
 </HTML>
