--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_kell.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_kell.html
@@ -79,16 +79,16 @@ Kell and Brooks Robinson are both from Arkansas, both played third base for the 
 Kell served on the Arkansas State Highway Commission after his retirement from playing and broadcasting?
 
 
-For more on Kell's interview, as well as other interviews with players from Baseball's Golden Era, visit <A HREF="http://www.hellobaseballfans.com" TARGET="_blank"><I>www.hellobaseballfans.com</I></A>.
+For more on Kell's interview, as well as other interviews with players from Baseball's Golden Era, visit <a href="http://www.hellobaseballfans.com" TARGET="_blank"><I>www.hellobaseballfans.com</I></a>.
 
 For further reading, try the book <I>Hello everybody, I'm George Kell<I> (Sports Publishing, Champaign, IL, 1998)</I>
 <!--
 
-For more high-quality classic sports photographs, visit <A HREF="http://www.sports-heros.com" TARGET="_blank"><I>www.sports-heros.com</I></A>.
+For more high-quality classic sports photographs, visit <a href="http://www.sports-heros.com" TARGET="_blank"><I>www.sports-heros.com</I></a>.
 -->
 
 <HR>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
