--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_home.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_home.html
@@ -14,41 +14,41 @@
 <HR>
 </CENTER>
 <UL>
-<LI><B><A HREF="bi_vol_2_no_2_cover.html" CLASS="BaseballInk" TARGET="fraViewFrame">The Cover</A></B></LI>
+<LI><B><a href="bi_vol_2_no_2_cover.html" TARGET="fraViewFrame">The Cover</a></B></LI>
 
-<LI><A HREF="bi_vol_2_no_2_all_new_york_team.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>All-Star State Teams:  New York</A></B>, by Tommy T</LI>
+<LI><a href="bi_vol_2_no_2_all_new_york_team.html" TARGET="fraViewFrame"><B>All-Star State Teams:  New York</a></B>, by Tommy T</LI>
 
-<LI><B><A HREF="bi_vol_2_no_2_letter_from_publisher.html" CLASS="BaseballInk" TARGET="fraViewFrame">Letter from the Publisher</A></B></LI>
+<LI><B><a href="bi_vol_2_no_2_letter_from_publisher.html" TARGET="fraViewFrame">Letter from the Publisher</a></B></LI>
 
-<LI><A HREF="bi_vol_2_no_2_opening_day_2000.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Opening Day 2000</A></B>, by Bill Burns</LI>
+<LI><a href="bi_vol_2_no_2_opening_day_2000.html" TARGET="fraViewFrame"><B>Opening Day 2000</a></B>, by Bill Burns</LI>
 
-<LI><A HREF="bi_vol_2_no_2_a_fan_of_the_game.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>A Fan of the Game</A></B>, by James P. Roberts</LI>
+<LI><a href="bi_vol_2_no_2_a_fan_of_the_game.html" TARGET="fraViewFrame"><B>A Fan of the Game</a></B>, by James P. Roberts</LI>
 
-<LI><A HREF="bi_vol_2_no_2_score_night.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Score Night</A></B>, by Jane Richard</LI>
+<LI><a href="bi_vol_2_no_2_score_night.html" TARGET="fraViewFrame"><B>Score Night</a></B>, by Jane Richard</LI>
 
-<LI><A HREF="bi_vol_2_no_2_the_home_of_the_braves.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>The Home of the Braves</A></B>, by Bruce Marshall</LI>
+<LI><a href="bi_vol_2_no_2_the_home_of_the_braves.html" TARGET="fraViewFrame"><B>The Home of the Braves</a></B>, by Bruce Marshall</LI>
 
-<LI><A HREF="bi_vol_2_no_2_cards_and_heroes.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Cards and Heroes</B></A>, by Tom Waltz</LI>
+<LI><a href="bi_vol_2_no_2_cards_and_heroes.html" TARGET="fraViewFrame"><B>Cards and Heroes</B></a>, by Tom Waltz</LI>
 
-<LI><A HREF="bi_vol_2_no_2_poems.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Poems</A></B>, by Dan Zamudio</LI>
+<LI><a href="bi_vol_2_no_2_poems.html" TARGET="fraViewFrame"><B>Poems</a></B>, by Dan Zamudio</LI>
 
-<LI><A HREF="bi_vol_2_no_2_limericks.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Limericks</A></B>, by Bennett Oberfeld</LI>
+<LI><a href="bi_vol_2_no_2_limericks.html" TARGET="fraViewFrame"><B>Limericks</a></B>, by Bennett Oberfeld</LI>
 
-<LI><A HREF="bi_vol_2_no_2_gotcha.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Gotcha!</A></B>, by Tom Batell</LI>
+<LI><a href="bi_vol_2_no_2_gotcha.html" TARGET="fraViewFrame"><B>Gotcha!</a></B>, by Tom Batell</LI>
 
-<LI><A HREF="bi_vol_2_no_2_jack_lively.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Jack Lively</A></B>, by Steve A. Maze</LI>
+<LI><a href="bi_vol_2_no_2_jack_lively.html" TARGET="fraViewFrame"><B>Jack Lively</a></B>, by Steve A. Maze</LI>
 
-<LI><A HREF="bi_vol_2_no_2_only_the_ball.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Only The Ball Was Dead</B></A>, by C. B. Rothwell</LI>
+<LI><a href="bi_vol_2_no_2_only_the_ball.html" TARGET="fraViewFrame"><B>Only The Ball Was Dead</B></a>, by C. B. Rothwell</LI>
 
-<LI><A HREF="bi_vol_2_no_2_baseball_time.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Baseball Time</A></B>, by Cecilia Tan</LI>
+<LI><a href="bi_vol_2_no_2_baseball_time.html" TARGET="fraViewFrame"><B>Baseball Time</a></B>, by Cecilia Tan</LI>
 
-<LI><A HREF="bi_vol_2_no_2_emphasizing.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Emphasizing Division Records</A></B>, by Dave Quinn</LI>
+<LI><a href="bi_vol_2_no_2_emphasizing.html" TARGET="fraViewFrame"><B>Emphasizing Division Records</a></B>, by Dave Quinn</LI>
 
-<LI><A HREF="bi_vol_2_no_2_whiffling.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Whiffling the Summer Away</B></A>, by Robert Nishihara</LI>
+<LI><a href="bi_vol_2_no_2_whiffling.html" TARGET="fraViewFrame"><B>Whiffling the Summer Away</B></a>, by Robert Nishihara</LI>
 
-<LI><A HREF="bi_vol_2_no_2_meeting_lefty.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Meeting Lefty O'Doul</B></A>, by Bill Burns</LI>
+<LI><a href="bi_vol_2_no_2_meeting_lefty.html" TARGET="fraViewFrame"><B>Meeting Lefty O'Doul</B></a>, by Bill Burns</LI>
 
-<LI><A HREF="bi_vol_2_no_2_game_2.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Game 2 of the 2000 World Series</B></A>, by Rick Walunas</LI>
+<LI><a href="bi_vol_2_no_2_game_2.html" TARGET="fraViewFrame"><B>Game 2 of the 2000 World Series</B></a>, by Rick Walunas</LI>
 
 
 
@@ -56,12 +56,12 @@
 
 <!--
 <HR>
-<A HREF="../bi_subscriptions.html" CLASS="BaseballInk" TARGET="fraViewFrame">Subscribe here!</A>
+<a href="../bi_subscriptions.html" TARGET="fraViewFrame">Subscribe here!</a>
 <HR>
 -->
 
 
-<A HREF="http://www.baseballink.com" CLASS="BaseballInk" TARGET="_top">Click here to go to the Baseball Ink Home Page</A>
+<a href="http://www.baseballink.com" TARGET="_top">Click here to go to the Baseball Ink Home Page</a>
 </BODY>
 
 </HTML>
