--- a/pages/magazine/vol_1_no_2/bi_vol_1_no_2_kitty_league.html
+++ b/pages/magazine/vol_1_no_2/bi_vol_1_no_2_kitty_league.html
@@ -43,12 +43,12 @@ Like the umpire said, the Kitty League was definitely a character.
 
 
 <I>
-Kevin D. McCann is the author of </I><B>Jackson Diamonds: Professional Baseball in Jackson, Tennessee</B><I> and is the webmaster for </I><B>Kitty League Baseball</B><I> (<A HREF="http://www.kittyleague.homestead.com" CLASS="BaseballInk" TARGET="_top">http://www.kittyleague.homestead.com</A>). He is currently working on a book on the Kitty League.
+Kevin D. McCann is the author of </I><B>Jackson Diamonds: Professional Baseball in Jackson, Tennessee</B><I> and is the webmaster for </I><B>Kitty League Baseball</B><I> (<a href="http://www.kittyleague.homestead.com" TARGET="_top">http://www.kittyleague.homestead.com</a>). He is currently working on a book on the Kitty League.
 </I>
 
 
 <HR>
-<A HREF="bi_vol_1_no_2_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
