--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_all_maryland_team.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_all_maryland_team.html
@@ -55,7 +55,7 @@
 
 
 <HR>
-<A HREF="bi_vol_1_no_3_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 </BODY>
 </HTML>
