--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_poems.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_poems.html
@@ -64,7 +64,7 @@ Dan's baseball poems can also be seen in the 2001
 issue of SABR's "The National Pastime". </i>
 
 <HR>
-<A HREF="bi_vol_1_no_3_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
