--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_puzzle_answers.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_puzzle_answers.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <BODY>
-<A HREF="bi_vol_1_no_3_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 
 
@@ -17,7 +17,7 @@
 </CENTER>
 
 
-<A HREF="bi_vol_1_no_3_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 </BODY>
 
