--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_all_oklahoma_team.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_all_oklahoma_team.html
@@ -56,7 +56,7 @@
 
 
 <HR>
-<A HREF="bi_vol_1_no_4_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 </BODY>
 </HTML>
