--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_home.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_home.html
@@ -14,45 +14,45 @@
 <HR>
 </CENTER>
 <UL>
-<LI><B><A HREF="bi_vol_1_no_4_cover.html" CLASS="BaseballInk" TARGET="fraViewFrame">The Cover</A></B></LI>
+<LI><B><a href="bi_vol_1_no_4_cover.html" TARGET="fraViewFrame">The Cover</a></B></LI>
 
-<LI><A HREF="bi_vol_1_no_4_all_oklahoma_team.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>All-Star State Teams:  Oklahoma</A></B>, by Todd Newville</LI>
+<LI><a href="bi_vol_1_no_4_all_oklahoma_team.html" TARGET="fraViewFrame"><B>All-Star State Teams:  Oklahoma</a></B>, by Todd Newville</LI>
 
-<LI><B><A HREF="bi_vol_1_no_4_letter_from_publisher.html" CLASS="BaseballInk" TARGET="fraViewFrame">Letter from the Publisher</A></B></LI>
+<LI><B><a href="bi_vol_1_no_4_letter_from_publisher.html" TARGET="fraViewFrame">Letter from the Publisher</a></B></LI>
 
-<LI><B><A HREF="bi_vol_1_no_4_letters_to_publisher.html" CLASS="BaseballInk" TARGET="fraViewFrame">Letters to the Publisher</A></B></LI>
+<LI><B><a href="bi_vol_1_no_4_letters_to_publisher.html" TARGET="fraViewFrame">Letters to the Publisher</a></B></LI>
 
-<LI><A HREF="bi_vol_1_no_4_opening_day.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Opening Day</A></B>, by Karl Jacobsen</LI>
+<LI><a href="bi_vol_1_no_4_opening_day.html" TARGET="fraViewFrame"><B>Opening Day</a></B>, by Karl Jacobsen</LI>
 
-<LI><A HREF="bi_vol_1_no_4_ryans_corner.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Ryan's Corner</B></A>, by Ryan</LI>
+<LI><a href="bi_vol_1_no_4_ryans_corner.html" TARGET="fraViewFrame"><B>Ryan's Corner</B></a>, by Ryan</LI>
 
-<LI><A HREF="bi_vol_1_no_4_diamond_madness.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Diamond Madness #3</A></B> - a baseball crossword puzzle</LI>
+<LI><a href="bi_vol_1_no_4_diamond_madness.html" TARGET="fraViewFrame"><B>Diamond Madness #3</a></B> - a baseball crossword puzzle</LI>
 
-<LI><A HREF="bi_vol_1_no_4_little_sluggers.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Little Sluggers</A></B>, by PFC Damian J. McGee</LI>
+<LI><a href="bi_vol_1_no_4_little_sluggers.html" TARGET="fraViewFrame"><B>Little Sluggers</a></B>, by PFC Damian J. McGee</LI>
 
-<LI><A HREF="bi_vol_1_no_4_tommy_t.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Tommy T's Baseball Flix Pix</A></B>, by Tom Tilert</LI>
+<LI><a href="bi_vol_1_no_4_tommy_t.html" TARGET="fraViewFrame"><B>Tommy T's Baseball Flix Pix</a></B>, by Tom Tilert</LI>
 
-<LI><A HREF="bi_vol_1_no_4_ive_done_what_i_can.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>I've Done What I Can</A></B>, by Rick Lopez</LI>
+<LI><a href="bi_vol_1_no_4_ive_done_what_i_can.html" TARGET="fraViewFrame"><B>I've Done What I Can</a></B>, by Rick Lopez</LI>
 
-<LI><A HREF="bi_vol_1_no_4_shaking_hands.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Shaking Hands With The Babe</A></B>, by Steve A. Maze</LI>
+<LI><a href="bi_vol_1_no_4_shaking_hands.html" TARGET="fraViewFrame"><B>Shaking Hands With The Babe</a></B>, by Steve A. Maze</LI>
 
-<LI><A HREF="bi_vol_1_no_4_how_to_become.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>How To Become A Baseball CEO</B></A>, by Tim Darnell</LI>
+<LI><a href="bi_vol_1_no_4_how_to_become.html" TARGET="fraViewFrame"><B>How To Become A Baseball CEO</B></a>, by Tim Darnell</LI>
 
-<LI><A HREF="bi_vol_1_no_4_cartas_crypto.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Carta's Crypto</A></B> - a baseball-related cryptogram by Kathy Martenot</LI>
+<LI><a href="bi_vol_1_no_4_cartas_crypto.html" TARGET="fraViewFrame"><B>Carta's Crypto</a></B> - a baseball-related cryptogram by Kathy Martenot</LI>
 
-<LI><A HREF="bi_vol_1_no_4_green_ink.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Green Ink</B></A>, by Leo Gillis</LI>
+<LI><a href="bi_vol_1_no_4_green_ink.html" TARGET="fraViewFrame"><B>Green Ink</B></a>, by Leo Gillis</LI>
 
-<LI><A HREF="bi_vol_1_no_4_bunkos_quest.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Bunko's Quest</B></A>, by Mike McCann</LI>
+<LI><a href="bi_vol_1_no_4_bunkos_quest.html" TARGET="fraViewFrame"><B>Bunko's Quest</B></a>, by Mike McCann</LI>
 
-<LI><A HREF="bi_vol_1_no_4_poems.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Poems</A></B>, by Dan Zamudio</LI>
+<LI><a href="bi_vol_1_no_4_poems.html" TARGET="fraViewFrame"><B>Poems</a></B>, by Dan Zamudio</LI>
 
-<LI><A HREF="bi_vol_1_no_4_limericks.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Limericks</A></B>, by Bennett Oberfeld</LI>
+<LI><a href="bi_vol_1_no_4_limericks.html" TARGET="fraViewFrame"><B>Limericks</a></B>, by Bennett Oberfeld</LI>
 
-<LI><A HREF="bi_vol_1_no_4_missing_october.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Missing October</B></A>, by Jess Zielinski</LI>
+<LI><a href="bi_vol_1_no_4_missing_october.html" TARGET="fraViewFrame"><B>Missing October</B></a>, by Jess Zielinski</LI>
 
-<LI><A HREF="bi_vol_1_no_4_my_final_high_school_season.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>My Final High School Season</B></A>, by Jason Patzfahl</LI>
+<LI><a href="bi_vol_1_no_4_my_final_high_school_season.html" TARGET="fraViewFrame"><B>My Final High School Season</B></a>, by Jason Patzfahl</LI>
 
-<LI><A HREF="bi_vol_1_no_4_puzzle_answers.html" CLASS="BaseballInk" TARGET="fraViewFrame"><B>Puzzle Answers</B></A></LI>
+<LI><a href="bi_vol_1_no_4_puzzle_answers.html" TARGET="fraViewFrame"><B>Puzzle Answers</B></a></LI>
 
 
 
@@ -60,13 +60,13 @@
 
 <!--
 <HR>
-<A HREF="../bi_subscriptions.html" CLASS="BaseballInk" TARGET="fraViewFrame">Subscribe here!</A>
+<a href="../bi_subscriptions.html" TARGET="fraViewFrame">Subscribe here!</a>
 <HR>
 -->
 
 
 
-<A HREF="http://www.baseballink.com" CLASS="BaseballInk" TARGET="_top">Click here to go to the Baseball Ink Home Page</A>
+<a href="http://www.baseballink.com" TARGET="_top">Click here to go to the Baseball Ink Home Page</a>
 </BODY>
 
 </HTML>
