--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ive_done_what_i_can.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ive_done_what_i_can.html
@@ -48,11 +48,11 @@ And the gloves snap off: "That's it, it's done..." I walk quickly to the mirror,
 Re-printed with permission from "Baseball and the 10,000 Things."
 
 
-<I>After a 20-year sabbatical from the world of baseball, Rick Lopez has returned.  Follow his chronicled journey in "Baseball and the 10,000 Things" as part of "The Whole Shebang" at:  </I><A HREF="http://www.velocity.net/~bb10k" CLASS="BaseballInk" TARGET="_blank">http://www.velocity.net/~bb10k<A>
+<I>After a 20-year sabbatical from the world of baseball, Rick Lopez has returned.  Follow his chronicled journey in "Baseball and the 10,000 Things" as part of "The Whole Shebang" at:  </I><a href="http://www.velocity.net/~bb10k" TARGET="_blank">http://www.velocity.net/~bb10k<A>
 
 
 <HR>
-<A HREF="bi_vol_1_no_4_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
