--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_little_sluggers.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_little_sluggers.html
@@ -46,7 +46,7 @@ Regardless of whether the children stick with the sport, according to Blount, th
 
 
 <HR>
-<A HREF="bi_vol_1_no_4_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
