--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_poems.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_poems.html
@@ -80,10 +80,10 @@ his mitt.
 rolls of action photos while he played catch with strangers on Wrigley Field after a long tour.
 
 Dan's baseball poems can also be seen in the 2001
-issue of <A HREF="http://www.sabr.org" CLASS="BaseballInk" TARGET="_blank">SABR's</A> "The National Pastime". </i>
+issue of <a href="http://www.sabr.org" TARGET="_blank">SABR's</a> "The National Pastime". </i>
 
 <HR>
-<A HREF="bi_vol_1_no_4_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
