--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_shaking_hands.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_shaking_hands.html
@@ -39,7 +39,7 @@ Steve A. Maze is a former "wanna-be" major leaguer who wasn't talented enough to
 
 
 <HR>
-<A HREF="bi_vol_1_no_4_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
