--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_tommy_t.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_tommy_t.html
@@ -90,7 +90,7 @@ My rating:  A towering blast with the bases loaded.    GRAND SLAM!
 
 Review by Tom Tilert
 <HR>
-<A HREF="bi_vol_1_no_4_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
