--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_all_alabama_team.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_all_alabama_team.html
@@ -46,7 +46,7 @@
 
 
 <HR>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 </BODY>
 </HTML>
