--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_bunkos_quest.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_bunkos_quest.html
@@ -40,14 +40,14 @@ Mike McCann
 
 
 <I>
-Mike is always looking for people to attend baseball games with him, so if you are interested, please contact him at <A HREF="mailto:bunko@udel.edu" CLASS="BaseballInk">bigbunko@netzero.net</A>
+Mike is always looking for people to attend baseball games with him, so if you are interested, please contact him at <a href="mailto:bunko@udel.edu">bigbunko@netzero.net</a>
 
-Learn more about Bunko's quest to visit every major and minor league stadium: <A HREF="http://www.netcolony.com/sports/bunko/" CLASS="BaseballInk" TARGET="_top">http://www.netcolony.com/sports/bunko/</A>
+Learn more about Bunko's quest to visit every major and minor league stadium: <a href="http://www.netcolony.com/sports/bunko/" TARGET="_top">http://www.netcolony.com/sports/bunko/</a>
 </I>
 
 
 <HR>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
