--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_cartas_crypto.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_cartas_crypto.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <BODY>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 
 
@@ -16,7 +16,7 @@
 </CENTER>
 
 
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 </BODY>
 
