--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_cow_pasture.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_cow_pasture.html
@@ -44,7 +44,7 @@ I was playing shortstop. The batter hit a sharp grounder to my right, I dug it o
 
 
 <HR>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
