--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_hungary_for_the_game.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_hungary_for_the_game.html
@@ -43,13 +43,13 @@ Borbely's own interest in the sport began after his son, a judo champion, return
 "Our hope is to have a team ready to compete in the 2004 Olympic Games in Athens," Borbely asserted.
 
 
-<I>Sam Margolis is a former Peace Corps volunteer and Yankee fan who is in Hungary as a journalist.  More of Sam's non-baseball material can be found at <A HREF="http://www.chortler.com" TARGET="_blank">www.chortler.com</A></I>
+<I>Sam Margolis is a former Peace Corps volunteer and Yankee fan who is in Hungary as a journalist.  More of Sam's non-baseball material can be found at <a href="http://www.chortler.com" TARGET="_blank">www.chortler.com</a></I>
 
-Photos of the Ajka Blackbirds by Szabolcs Garai.  More photos online at <A HREF="http://www.nexus.hu/feketerigok/fotogaleria.htm" TARGET="_blank">www.nexus.hu/feketerigok/fotogaleria.htm</A>
+Photos of the Ajka Blackbirds by Szabolcs Garai.  More photos online at <a href="http://www.nexus.hu/feketerigok/fotogaleria.htm" TARGET="_blank">www.nexus.hu/feketerigok/fotogaleria.htm</a>
 
 
 <HR>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
