--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_letter_from_publisher.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_letter_from_publisher.html
@@ -47,7 +47,7 @@ J. P. Alexander
 Publisher, Baseball Ink
 
 <HR>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
