--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_life_on_the_road.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_life_on_the_road.html
@@ -44,11 +44,11 @@ Travel days are a difficult part of road trips.  One these days, teams will rent
 
 When the evening's game ends, the cycle continues.  The players will shower, dress and pack up their equipment.  They load up the bus and it is time to travel again.  If there is no post-game meal, the bus will stop at some fast-food restaurant at a rest stop on the way to the next city.  Once the team boards the bus, some will play cards or dominoes, some will plug their headphones into portable CD players, and others will sleep.  While some players fall asleep easily, others struggle, never learning how to sleep on a bus.  It is part of the cycle that continues throughout the season.  Arriving in a different town at all hours of the night.  Some may arrive tired and have a sub-par game the next day, but they know they have to have the proper mindset.  Tomorrow, there is another game to play.
 
-<I>Frank Priegue is a New York-based photographer and author who deals with his baseball withdrawal syndrome by traveling to Eastern League ballparks.  See Frank's journey chronicled at <A HREF="http://www.twostepsaway.com" TARGET="_blank">www.twostepsaway.com</A>.</I>
+<I>Frank Priegue is a New York-based photographer and author who deals with his baseball withdrawal syndrome by traveling to Eastern League ballparks.  See Frank's journey chronicled at <a href="http://www.twostepsaway.com" TARGET="_blank">www.twostepsaway.com</a>.</I>
 
 
 <HR>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
