--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_puzzle_answers.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_puzzle_answers.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <BODY>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 
 <CENTER>
@@ -18,7 +18,7 @@
 </CENTER>
 
 
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 
 </BODY>
 
