--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tarot_1.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tarot_1.html
@@ -101,11 +101,11 @@ by Kerri S. McIntire
 <P>The Waite-Smith examples are also from a deck published by U. S. Games Systems, Inc. </P>
 
 <P>&nbsp;</P>
-<I><P>BIO: <FONT FACE="Times">Kerri McIntire is a Tarot enthusiast who saw a future in working with the past. She and her better half Dave Buckhout run </I>InHeritage<I>, an Internet design company specializing in historical presentations. For more information, visit <A HREF="http://www.inheritage.org" TARGET="_blank"></I>www.InHeritage.org<I></A>.</P>
+<I><P>BIO: <FONT FACE="Times">Kerri McIntire is a Tarot enthusiast who saw a future in working with the past. She and her better half Dave Buckhout run </I>InHeritage<I>, an Internet design company specializing in historical presentations. For more information, visit <a href="http://www.inheritage.org" TARGET="_blank"></I>www.InHeritage.org<I></a>.</P>
 </I></FONT>
 
 <HR>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
