--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tommy_t.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tommy_t.html
@@ -31,7 +31,7 @@ My rating -- a prodigious blast that ripples the biceps, shakes the stadium, giv
 
 Review by Tom Tilert
 <HR>
-<A HREF="bi_vol_2_no_1_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
