--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_a_fan_of_the_game.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_a_fan_of_the_game.html
@@ -73,7 +73,7 @@ It was a small crowd tonight. Hank Johnson had expected it would be. The Cythera
 
 
 <HR>
-<A HREF="bi_vol_2_no_2_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
