--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_jack_lively.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_jack_lively.html
@@ -54,7 +54,7 @@ by Steve A. Maze
 
 
 <HR>
-<A HREF="bi_vol_2_no_2_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
