--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_letter_from_publisher.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_letter_from_publisher.html
@@ -27,7 +27,7 @@ J. P. Alexander
 Publisher, Baseball Ink
 
 <HR>
-<A HREF="bi_vol_2_no_2_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
