--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_limericks.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_limericks.html
@@ -27,7 +27,7 @@ And to bat he would send up a midget
 
 
 <HR>
-<A HREF="bi_vol_2_no_2_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
