--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_only_the_ball.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_only_the_ball.html
@@ -46,7 +46,7 @@ Fiction by C. B. Rothwell
 
 
 <HR>
-<A HREF="bi_vol_2_no_2_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
