--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_opening_day_2000.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_opening_day_2000.html
@@ -56,7 +56,7 @@ or you are.
 
 
 <HR>
-<A HREF="bi_vol_2_no_2_home.html" CLASS="BaseballInk" TARGET="fraViewFrame">Back to Table of Contents</A>
+<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
