Vol 1 No 3 - Table of Contents

--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_international_dream.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_international_dream.html
@@ -39,7 +39,7 @@ What's does next year hold for these daring Foreign Devils?  "I'm looking into e
 
 
 <HR>
-<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_3_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
