--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_magic_in_rohnert_park.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_magic_in_rohnert_park.html
@@ -53,7 +53,7 @@ Something mysterious happened at Candlestick Park during that magical Giant
 season:  Jane's heart metamorphosed into a baseball.</i>
 
 <HR>
-<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_3_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
