--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_how_to_become.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_how_to_become.html
@@ -48,7 +48,7 @@ But one thing I will never abandon is my commitment to make the game affordable 
 <I>Tim Darnell is an Atlanta native and long-time baseball fan who is finding his love of the game being challenged by approaching the game as a business. He lives in Atlanta's Brookhaven neighborhood with his tolerant and long suffering wife, Susan.  Follow the Albany Alligators at </I><a href="http://www.albanyalligators.com" TARGET="_blank">www.albanyalligators.com</a>.
 
 <HR>
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
