--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_my_final_high_school_season.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_my_final_high_school_season.html
@@ -28,7 +28,7 @@ We survived that year, as we did every other year, and we ended up capturing the
 
 
 <HR>
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
