--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_kell.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_kell.html
@@ -88,7 +88,7 @@ For more high-quality classic sports photographs, visit <a href="http://www.spor
 -->
 
 <HR>
-<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
