--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_life_on_the_road.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_life_on_the_road.html
@@ -48,7 +48,7 @@ When the evening's game ends, the cycle continues.  The players will shower, dre
 
 
 <HR>
-<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
