--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_baseball_time.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_baseball_time.html
@@ -31,7 +31,7 @@ Now, whether I am seeing a game at Fenway, or in a small Florida spring training
 
 
 <HR>
-<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_2_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
