--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_cover.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_cover.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <BODY CLASS="Invert">
-<a href="bi_vol_2_no_2_home.html" CLASS="Invert" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_2_home.html" CLASS="Invert">Back to Table of Contents</a>
 
 
 
@@ -17,7 +17,7 @@
 </CENTER>
 
 
-<a href="bi_vol_2_no_2_home.html" CLASS="Invert" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_2_home.html" CLASS="Invert">Back to Table of Contents</a>
 
 </BODY>
 
