--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_home.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_home.html
@@ -14,41 +14,41 @@
 <HR>
 </CENTER>
 <UL>
-<LI><B><a href="bi_vol_2_no_2_cover.html" TARGET="fraViewFrame">The Cover</a></B></LI>
+<LI><B><a href="bi_vol_2_no_2_cover.html">The Cover</a></B></LI>
 
-<LI><a href="bi_vol_2_no_2_all_new_york_team.html" TARGET="fraViewFrame"><B>All-Star State Teams:  New York</a></B>, by Tommy T</LI>
+<LI><a href="bi_vol_2_no_2_all_new_york_team.html"><B>All-Star State Teams:  New York</a></B>, by Tommy T</LI>
 
-<LI><B><a href="bi_vol_2_no_2_letter_from_publisher.html" TARGET="fraViewFrame">Letter from the Publisher</a></B></LI>
+<LI><B><a href="bi_vol_2_no_2_letter_from_publisher.html">Letter from the Publisher</a></B></LI>
 
-<LI><a href="bi_vol_2_no_2_opening_day_2000.html" TARGET="fraViewFrame"><B>Opening Day 2000</a></B>, by Bill Burns</LI>
+<LI><a href="bi_vol_2_no_2_opening_day_2000.html"><B>Opening Day 2000</a></B>, by Bill Burns</LI>
 
-<LI><a href="bi_vol_2_no_2_a_fan_of_the_game.html" TARGET="fraViewFrame"><B>A Fan of the Game</a></B>, by James P. Roberts</LI>
+<LI><a href="bi_vol_2_no_2_a_fan_of_the_game.html"><B>A Fan of the Game</a></B>, by James P. Roberts</LI>
 
-<LI><a href="bi_vol_2_no_2_score_night.html" TARGET="fraViewFrame"><B>Score Night</a></B>, by Jane Richard</LI>
+<LI><a href="bi_vol_2_no_2_score_night.html"><B>Score Night</a></B>, by Jane Richard</LI>
 
-<LI><a href="bi_vol_2_no_2_the_home_of_the_braves.html" TARGET="fraViewFrame"><B>The Home of the Braves</a></B>, by Bruce Marshall</LI>
+<LI><a href="bi_vol_2_no_2_the_home_of_the_braves.html"><B>The Home of the Braves</a></B>, by Bruce Marshall</LI>
 
-<LI><a href="bi_vol_2_no_2_cards_and_heroes.html" TARGET="fraViewFrame"><B>Cards and Heroes</B></a>, by Tom Waltz</LI>
+<LI><a href="bi_vol_2_no_2_cards_and_heroes.html"><B>Cards and Heroes</B></a>, by Tom Waltz</LI>
 
-<LI><a href="bi_vol_2_no_2_poems.html" TARGET="fraViewFrame"><B>Poems</a></B>, by Dan Zamudio</LI>
+<LI><a href="bi_vol_2_no_2_poems.html"><B>Poems</a></B>, by Dan Zamudio</LI>
 
-<LI><a href="bi_vol_2_no_2_limericks.html" TARGET="fraViewFrame"><B>Limericks</a></B>, by Bennett Oberfeld</LI>
+<LI><a href="bi_vol_2_no_2_limericks.html"><B>Limericks</a></B>, by Bennett Oberfeld</LI>
 
-<LI><a href="bi_vol_2_no_2_gotcha.html" TARGET="fraViewFrame"><B>Gotcha!</a></B>, by Tom Batell</LI>
+<LI><a href="bi_vol_2_no_2_gotcha.html"><B>Gotcha!</a></B>, by Tom Batell</LI>
 
-<LI><a href="bi_vol_2_no_2_jack_lively.html" TARGET="fraViewFrame"><B>Jack Lively</a></B>, by Steve A. Maze</LI>
+<LI><a href="bi_vol_2_no_2_jack_lively.html"><B>Jack Lively</a></B>, by Steve A. Maze</LI>
 
-<LI><a href="bi_vol_2_no_2_only_the_ball.html" TARGET="fraViewFrame"><B>Only The Ball Was Dead</B></a>, by C. B. Rothwell</LI>
+<LI><a href="bi_vol_2_no_2_only_the_ball.html"><B>Only The Ball Was Dead</B></a>, by C. B. Rothwell</LI>
 
-<LI><a href="bi_vol_2_no_2_baseball_time.html" TARGET="fraViewFrame"><B>Baseball Time</a></B>, by Cecilia Tan</LI>
+<LI><a href="bi_vol_2_no_2_baseball_time.html"><B>Baseball Time</a></B>, by Cecilia Tan</LI>
 
-<LI><a href="bi_vol_2_no_2_emphasizing.html" TARGET="fraViewFrame"><B>Emphasizing Division Records</a></B>, by Dave Quinn</LI>
+<LI><a href="bi_vol_2_no_2_emphasizing.html"><B>Emphasizing Division Records</a></B>, by Dave Quinn</LI>
 
-<LI><a href="bi_vol_2_no_2_whiffling.html" TARGET="fraViewFrame"><B>Whiffling the Summer Away</B></a>, by Robert Nishihara</LI>
+<LI><a href="bi_vol_2_no_2_whiffling.html"><B>Whiffling the Summer Away</B></a>, by Robert Nishihara</LI>
 
-<LI><a href="bi_vol_2_no_2_meeting_lefty.html" TARGET="fraViewFrame"><B>Meeting Lefty O'Doul</B></a>, by Bill Burns</LI>
+<LI><a href="bi_vol_2_no_2_meeting_lefty.html"><B>Meeting Lefty O'Doul</B></a>, by Bill Burns</LI>
 
-<LI><a href="bi_vol_2_no_2_game_2.html" TARGET="fraViewFrame"><B>Game 2 of the 2000 World Series</B></a>, by Rick Walunas</LI>
+<LI><a href="bi_vol_2_no_2_game_2.html"><B>Game 2 of the 2000 World Series</B></a>, by Rick Walunas</LI>
 
 
 
@@ -56,7 +56,7 @@
 
 <!--
 <HR>
-<a href="../bi_subscriptions.html" TARGET="fraViewFrame">Subscribe here!</a>
+<a href="../bi_subscriptions.html">Subscribe here!</a>
 <HR>
 -->
 
