--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_bunkos_quest.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_bunkos_quest.html
@@ -41,7 +41,7 @@ Learn more about Bunko's quest to visit every major and minor league stadium: <a
 
 
 <HR>
-<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_3_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
