--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_letter_from_publisher.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_letter_from_publisher.html
@@ -60,7 +60,7 @@ J. P. Alexander
 Publisher, Baseball Ink
 
 <HR>
-<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_3_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
