--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_limericks.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_limericks.html
@@ -28,7 +28,7 @@ Plus Norm Charlton, the king of live wires
 <i>Bennett Oberfeld has been a die-hard baseball fan for over 30 years, rooting for home town teams starting with the Orioles, to the Cubs, now for the Braves.  He has been to 24 of the 30 existing ball parks, but refuses to see a game in Montreal Olympic Stadium or the Metrodome.</i>
 
 <HR>
-<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_3_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
