--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_machine_gun.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_machine_gun.html
@@ -33,7 +33,7 @@ It has been a very silent number of years for <i>"Machine Gun" Manny Martin</i>.
 
 
 <HR>
-<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_3_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
