--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_mcgwire_17_hr_behind.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_mcgwire_17_hr_behind.html
@@ -46,7 +46,7 @@ I'll see you at the ballpark, and God bless Mark McGwire and Mickey Mantle.
 
 
 <HR>
-<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_3_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
