--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_tom_tresh.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_tom_tresh.html
@@ -82,7 +82,7 @@ CLASS="BaseballInk">www.baseballtoddsdugout.com</a>.
 
 
 <HR>
-<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_3_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
