--- a/pages/magazine/vol_1_no_3/bi_vol_1_no_3_tommy_t.html
+++ b/pages/magazine/vol_1_no_3/bi_vol_1_no_3_tommy_t.html
@@ -23,7 +23,7 @@ My rating: A can of corn fly ball almost to the warning track. A ball hit that, 
 
 Review by Tom Tilert
 <HR>
-<a href="bi_vol_1_no_3_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_3_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
