--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_green_ink.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_green_ink.html
@@ -28,7 +28,7 @@ Kinsella himself probably thinks having a lefty's mitt with green writing on it 
 
 
 <HR>
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
