--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ive_done_what_i_can.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ive_done_what_i_can.html
@@ -52,7 +52,7 @@ Re-printed with permission from "Baseball and the 10,000 Things."
 
 
 <HR>
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
