--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_letter_from_publisher.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_letter_from_publisher.html
@@ -28,7 +28,7 @@ J. P. Alexander
 Publisher, Baseball Ink
 
 <HR>
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
