--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_limericks.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_limericks.html
@@ -30,7 +30,7 @@ So did he blow that late lead to appease us?"
 <I>See more of Bennett's work at: </I><a href="http://www.sportsweekly.net" TARGET="_blank">www.SportsWeekly.net</a>
 
 <HR>
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
