--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_missing_october.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_missing_october.html
@@ -40,7 +40,7 @@ Every winter my dad finds ways not to miss baseball. He'll read player biographi
 <I>Please visit Panic Magazine online at </I><a href="http://www.panicmag.com" TARGET="_blank">www.panicmag.com</a>.
 
 <HR>
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
