--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_opening_day.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_opening_day.html
@@ -48,7 +48,7 @@ It's winter now, and as I look forward to spring training, I sit and daydream ab
 
 
 <HR>
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
