--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_puzzle_answers.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_puzzle_answers.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <BODY>
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 
 
 <CENTER>
@@ -21,7 +21,7 @@
 </CENTER>
 
 
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 
 </BODY>
 
