--- a/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ryans_corner.html
+++ b/pages/magazine/vol_1_no_4/bi_vol_1_no_4_ryans_corner.html
@@ -25,7 +25,7 @@
 
 
 <HR>
-<a href="bi_vol_1_no_4_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_1_no_4_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
