--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_bunkos_quest.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_bunkos_quest.html
@@ -47,7 +47,7 @@ Learn more about Bunko's quest to visit every major and minor league stadium: <a
 
 
 <HR>
-<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
