--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_dervil_burlow.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_dervil_burlow.html
@@ -180,7 +180,7 @@ It was a long time before Dervil could set the newspaper aside. He was a man wit
 
 
 <HR>
-<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
