--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_field_for_dreams.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_field_for_dreams.html
@@ -48,7 +48,7 @@ J.K. Richards is a syndicated columnist living in Kingsport, Tenn. As a native C
 
 
 <HR>
-<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
