--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_home.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_home.html
@@ -14,37 +14,37 @@
 <HR>
 </CENTER>
 <UL>
-<LI><B><a href="bi_vol_2_no_1_cover.html" TARGET="fraViewFrame">The Cover</a></B></LI>
+<LI><B><a href="bi_vol_2_no_1_cover.html">The Cover</a></B></LI>
 
-<LI><a href="bi_vol_2_no_1_all_alabama_team.html" TARGET="fraViewFrame"><B>All-Star State Teams:  Alabama</a></B>, by Steve A. Maze</LI>
+<LI><a href="bi_vol_2_no_1_all_alabama_team.html"><B>All-Star State Teams:  Alabama</a></B>, by Steve A. Maze</LI>
 
-<LI><B><a href="bi_vol_2_no_1_letter_from_publisher.html" TARGET="fraViewFrame">Letter from the Publisher</a></B></LI>
+<LI><B><a href="bi_vol_2_no_1_letter_from_publisher.html">Letter from the Publisher</a></B></LI>
 
-<LI><a href="bi_vol_2_no_1_cow_pasture.html" TARGET="fraViewFrame"><B>Cow Pasture Baseball</a></B>, by Bill Raven</LI>
+<LI><a href="bi_vol_2_no_1_cow_pasture.html"><B>Cow Pasture Baseball</a></B>, by Bill Raven</LI>
 
-<LI><a href="bi_vol_2_no_1_kell.html" TARGET="fraViewFrame"><B>Catching Up With Kell</a></B>, by Jim Sanders</LI>
+<LI><a href="bi_vol_2_no_1_kell.html"><B>Catching Up With Kell</a></B>, by Jim Sanders</LI>
 
-<LI><a href="bi_vol_2_no_1_diamond_madness.html" TARGET="fraViewFrame"><B>Diamond Madness #4</a></B> - a baseball crossword puzzle</LI>
+<LI><a href="bi_vol_2_no_1_diamond_madness.html"><B>Diamond Madness #4</a></B> - a baseball crossword puzzle</LI>
 
-<LI><a href="bi_vol_2_no_1_tarot_1.html" TARGET="fraViewFrame"><B>Tarot and Baseball, Part 1</a></B>, by Kerri McEntire</LI>
+<LI><a href="bi_vol_2_no_1_tarot_1.html"><B>Tarot and Baseball, Part 1</a></B>, by Kerri McEntire</LI>
 
-<LI><a href="bi_vol_2_no_1_bunkos_quest.html" TARGET="fraViewFrame"><B>Bunko's Quest</B></a>, by Mike McCann</LI>
+<LI><a href="bi_vol_2_no_1_bunkos_quest.html"><B>Bunko's Quest</B></a>, by Mike McCann</LI>
 
-<LI><a href="bi_vol_2_no_1_tommy_t.html" TARGET="fraViewFrame"><B>Tommy T's Baseball Flix Pix</a></B>, by Tom Tilert</LI>
+<LI><a href="bi_vol_2_no_1_tommy_t.html"><B>Tommy T's Baseball Flix Pix</a></B>, by Tom Tilert</LI>
 
-<LI><a href="bi_vol_2_no_1_dervil_burlow.html" TARGET="fraViewFrame"><B>Dervil Burlow</a></B>, by Richard Johnson</LI>
+<LI><a href="bi_vol_2_no_1_dervil_burlow.html"><B>Dervil Burlow</a></B>, by Richard Johnson</LI>
 
-<LI><a href="bi_vol_2_no_1_field_for_dreams.html" TARGET="fraViewFrame"><B>A Field For Dreams</a></B>, by J. K. Richards</LI>
+<LI><a href="bi_vol_2_no_1_field_for_dreams.html"><B>A Field For Dreams</a></B>, by J. K. Richards</LI>
 
-<LI><a href="bi_vol_2_no_1_ryans_corner.html" TARGET="fraViewFrame"><B>Ryan's Corner</B></a>, by Ryan</LI>
+<LI><a href="bi_vol_2_no_1_ryans_corner.html"><B>Ryan's Corner</B></a>, by Ryan</LI>
 
-<LI><a href="bi_vol_2_no_1_life_on_the_road.html" TARGET="fraViewFrame"><B>Life On The Road</a></B>, by Frank Priegue</LI>
+<LI><a href="bi_vol_2_no_1_life_on_the_road.html"><B>Life On The Road</a></B>, by Frank Priegue</LI>
 
-<LI><a href="bi_vol_2_no_1_cartas_crypto.html" TARGET="fraViewFrame"><B>Carta's Crypto</a></B> - a baseball-related cryptogram by Kathy Martenot</LI>
+<LI><a href="bi_vol_2_no_1_cartas_crypto.html"><B>Carta's Crypto</a></B> - a baseball-related cryptogram by Kathy Martenot</LI>
 
-<LI><a href="bi_vol_2_no_1_hungary_for_the_game.html" TARGET="fraViewFrame"><B>Hungary For The Game</B></a>, by Sam Margolis</LI>
+<LI><a href="bi_vol_2_no_1_hungary_for_the_game.html"><B>Hungary For The Game</B></a>, by Sam Margolis</LI>
 
-<LI><a href="bi_vol_2_no_1_puzzle_answers.html" TARGET="fraViewFrame"><B>Puzzle Answers</B></a></LI>
+<LI><a href="bi_vol_2_no_1_puzzle_answers.html"><B>Puzzle Answers</B></a></LI>
 
 
 
@@ -52,7 +52,7 @@
 
 <!--
 <HR>
-<a href="../bi_subscriptions.html" TARGET="fraViewFrame">Subscribe here!</a>
+<a href="../bi_subscriptions.html">Subscribe here!</a>
 <HR>
 -->
 
