--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_hungary_for_the_game.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_hungary_for_the_game.html
@@ -49,7 +49,7 @@ Photos of the Ajka Blackbirds by Szabolcs Garai.  More photos online at <a href=
 
 
 <HR>
-<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
