--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_puzzle_answers.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_puzzle_answers.html
@@ -7,7 +7,7 @@
 </HEAD>
 
 <BODY>
-<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
 
 
 <CENTER>
@@ -18,7 +18,7 @@
 </CENTER>
 
 
-<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
 
 </BODY>
 
