--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_ryans_corner.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_ryans_corner.html
@@ -21,7 +21,7 @@ Soaring through the air...woosha!
 
 
 <HR>
-<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
