--- a/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tarot_1.html
+++ b/pages/magazine/vol_2_no_1/bi_vol_2_no_1_tarot_1.html
@@ -105,7 +105,7 @@ by Kerri S. McIntire
 </I></FONT>
 
 <HR>
-<a href="bi_vol_2_no_1_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_1_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
