--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_all_new_york_team.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_all_new_york_team.html
@@ -97,7 +97,7 @@
 
 
 <HR>
-<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_2_home.html">Back to Table of Contents</a>
 
 </BODY>
 </HTML>
