--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_gotcha.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_gotcha.html
@@ -90,7 +90,7 @@ The squeeze play had been foiled. The Williamsburg batter who fell down to get o
 
 
 <HR>
-<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_2_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
