--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_limericks.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_limericks.html
@@ -27,7 +27,7 @@ And to bat he would send up a midget
 
 
 <HR>
-<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_2_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
