--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_score_night.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_score_night.html
@@ -37,7 +37,7 @@ End of the eighth, and down in the bullpen Brian Rose had finished his warm-up t
 Three batters later the iron-blooded "Rosie" had dealt with the opposition and the game was over. As teammates gathered on the field to congratulate one another, the well-satisfied fans murmured happily, lingering before leaving. Impervious to the cold, kids ran about the stands with balls and gloves, or pressed at the low fences, clamouring for autographs. The players were only too happy to comply, and for a while the line between uniforms and sweaters blurred.
 
 <HR>
-<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_2_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
