--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_the_home_of_the_braves.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_the_home_of_the_braves.html
@@ -45,7 +45,7 @@ Given that certainty, I will mourn Milwaukee County Stadium's demise as I honor 
 
 
 <HR>
-<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_2_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
