--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_whiffling.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_whiffling.html
@@ -71,7 +71,7 @@ Nah, he doesn't. To this day, any time I hear the name "Boots Day" I am reminded
 
 
 <HR>
-<a href="bi_vol_2_no_2_home.html" TARGET="fraViewFrame">Back to Table of Contents</a>
+<a href="bi_vol_2_no_2_home.html">Back to Table of Contents</a>
 </BODY>
 
 </HTML>
