Vol 1 No 3 - Cover

--- a/pages/magazine/vol_2_no_2/bi_vol_2_no_2_cover.html
+++ b/pages/magazine/vol_2_no_2/bi_vol_2_no_2_cover.html
@@ -6,8 +6,8 @@
 <META NAME="ROBOTS" CONTENT="NOINDEX, NOFOLLOW">
 </HEAD>
 
-<BODY CLASS="Invert">
-<a href="bi_vol_2_no_2_home.html" CLASS="Invert">Back to Table of Contents</a>
+<BODY>
+<a href="bi_vol_2_no_2_home.html">Back to Table of Contents</a>
 
 
 
@@ -17,7 +17,7 @@
 </CENTER>
 
 
-<a href="bi_vol_2_no_2_home.html" CLASS="Invert">Back to Table of Contents</a>
+<a href="bi_vol_2_no_2_home.html">Back to Table of Contents</a>
 
 </BODY>
 
